# homework

./: README.md
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml  requirements.txt
homework_03/api/: items.py
homework_03/api/users/: crud.py  dependencies.py  schemas.py  views.py
homework_04/: docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml
homework_05/: pyproject.toml
homework_05/templates/: about.html  base.html  index.html
homework_06/: Dockerfile  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
homework_07/blog/blog/: settings.py  urls.py
homework_07/blog/blog_django_app/: models.py  views.py
homework_08/blog/blog/: settings.py  urls.py
homework_08/blog/blog_django_app/: admin.py  apps.py  urls.py  views.py
homework_08/blog/blog_django_app/migrations/: 0001_initial.py  0002_post.py
homework_08/blog/blog_django_app/templates/blog/: base.html  post_details.html  user_details.html  users.html
homework_09/blog/blog/: settings.py  urls.py
homework_09/blog/blog_authorization/: apps.py  models.py  urls.py  views.py
homework_09/blog/blog_authorization/migrations/: 0001_initial.py
homework_09/blog/blog_authorization/templates/blog_authorization/: login.html  register.html
homework_09/blog/blog_authorization/tests/: test_user_login.py  test_user_logout.py  test_user_register.py
homework_09/blog/blog_django_app/: apps.py  forms.py  models.py  urls.py  views.py
homework_09/blog/blog_django_app/fixtures/: posts.fixture.json  users.fixture.json
homework_09/blog/blog_django_app/migrations/: 0001_initial.py  0002_post.py
homework_09/blog/blog_django_app/templates/: base.html
homework_09/blog/blog_django_app/templates/blog/: base.html  post_confirm_delete.html  post_creation.html  post_details.html  posts.html  user_details.html  users.html
homework_09/blog/blog_django_app/tests/: test_post_creation.py  test_post_list.py  test_user_detail.py  test_user_list.py
