[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["evgeny <sun_nik_off@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fast_api_user_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
